# fibonacci_criterion

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs
