[package]
name = "fibonacci_number"
version = "0.1.0"
authors = ["hu3d4 <66501033+hu3d4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
